feat: 优化订阅源刷新和列表性能
- 新增订阅源刷新并发数配置选项，支持1/2/4/6并发
- 实现分批处理机制，每批处理10个订阅源
- 重构订阅源列表为虚拟滚动，大幅提升长列表性能
- 为文章列表添加智能缓存，避免每次重建时遍历大量数据
- 在刷新过程中显示实时进度对话框
- 使用Isolate优化文章提取性能

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -136,6 +136,21 @@
   "@unread": {
     "description": "unread"
   },
+  "refreshConcurrency": "Refresh Concurrency",
+  "@refreshConcurrency": {
+    "description": "refreshConcurrency"
+  },
+  "refreshingProgress": "Refreshing {current}/{total}...",
+  "@refreshingProgress": {
+    "placeholders": {
+      "current": {
+        "type": "int"
+      },
+      "total": {
+        "type": "int"
+      }
+    }
+  },
   "markAllRead": "Mark all read",
   "@markAllRead": {
     "description": "markAllRead"
@@ -513,6 +528,10 @@
   "autoRefresh": "Auto refresh",
   "@autoRefresh": {
     "description": "autoRefresh"
+  },
+  "autoRefreshSubtitle": "Automatically refresh feeds in background",
+  "@autoRefreshSubtitle": {
+    "description": "autoRefreshSubtitle"
   },
   "off": "Off",
   "@off": {
