feat: 为分类和订阅源添加过滤与同步设置
- 在分类和订阅源模型中新增过滤设置（`filterEnabled`、`filterKeywords`）和同步设置（`syncEnabled`、`syncImages`、`syncWebPages`、`showAiSummary`）。
- 更新本地化文件以支持过滤和同步功能的新字符串。
- 在设置详情面板中实现管理过滤和同步设置的 UI 组件。
- 创建辅助类以解析从订阅源、分类和全局应用设置的继承关系。
- 在仓库和操作中添加更新订阅源和分类的过滤与同步设置的方法。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -569,5 +569,73 @@
   "keyboardShortcuts": "Keyboard shortcuts",
   "@keyboardShortcuts": {
     "description": "keyboardShortcuts"
+  },
+  "filter": "Filter",
+  "@filter": {
+    "description": "filter"
+  },
+  "filterKeywordsHint": "Add reserved keywords (separate with \";\", connect multiple with \"+\")",
+  "@filterKeywordsHint": {
+    "description": "filterKeywordsHint"
+  },
+  "sync": "Sync",
+  "@sync": {
+    "description": "sync"
+  },
+  "enableSync": "Enable Sync",
+  "@enableSync": {
+    "description": "enableSync"
+  },
+  "syncAlwaysEnabled": "Always enabled (Settings - Sync - Sync Mode is \"All\")",
+  "@syncAlwaysEnabled": {
+    "description": "syncAlwaysEnabled"
+  },
+  "syncImages": "Download Images during Sync",
+  "@syncImages": {
+    "description": "syncImages"
+  },
+  "syncWebPages": "Download Web Pages during Sync",
+  "@syncWebPages": {
+    "description": "syncWebPages"
+  },
+  "showAiSummary": "Show AI Summary",
+  "@showAiSummary": {
+    "description": "showAiSummary"
+  },
+  "showImageTitle": "Show Image Title",
+  "@showImageTitle": {
+    "description": "showImageTitle"
+  },
+  "showAttachedImage": "Show Attached Image",
+  "@showAttachedImage": {
+    "description": "showAttachedImage"
+  },
+  "htmlDecoding": "HTML Decoding",
+  "@htmlDecoding": {
+    "description": "htmlDecoding"
+  },
+  "mobilizer": "Mobilizer",
+  "@mobilizer": {
+    "description": "mobilizer"
+  },
+  "inherit": "Inherit",
+  "@inherit": {
+    "description": "inherit"
+  },
+  "auto": "Auto",
+  "@auto": {
+    "description": "auto"
+  },
+  "autoOn": "Auto (On)",
+  "@autoOn": {
+    "description": "autoOn"
+  },
+  "autoOff": "Off",
+  "@autoOff": {
+    "description": "autoOff"
+  },
+  "defaultValue": "Default Value",
+  "@defaultValue": {
+    "description": "defaultValue"
   }
 }
