feat: 在订阅源设置中添加全局 User-Agent 配置
- 新增 `rssUserAgent` 和 `webUserAgent` 字段到应用设置，支持全局配置。
- 在设置详情面板中添加 User-Agent 配置区块，用户可在“设置 → 订阅源”中修改。
- 同步服务 (`sync_service.dart`) 和阅读器提供者 (`reader_providers.dart`) 中应用对应的 User-Agent。
- 修复订阅源设置菜单点击状态不变的问题，通过按 ID 监听单个对象确保状态正确更新。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -637,5 +637,29 @@
   "defaultValue": "Default Value",
   "@defaultValue": {
     "description": "defaultValue"
+  },
+  "userAgent": "User-Agent",
+  "@userAgent": {
+    "description": "userAgent"
+  },
+  "rssUserAgent": "RSS/Atom User-Agent",
+  "@rssUserAgent": {
+    "description": "rssUserAgent"
+  },
+  "webUserAgent": "Web Page User-Agent",
+  "@webUserAgent": {
+    "description": "webUserAgent"
+  },
+  "userAgentRssHint": "Used when fetching RSS/Atom feeds.",
+  "@userAgentRssHint": {
+    "description": "userAgentRssHint"
+  },
+  "userAgentWebHint": "Used when fetching full web pages (Readability).",
+  "@userAgentWebHint": {
+    "description": "userAgentWebHint"
+  },
+  "resetToDefault": "Reset to default",
+  "@resetToDefault": {
+    "description": "resetToDefault"
   }
 }
