feat: 将项目名称从 Flutter Reader 更改为 Fleur，更新相关文件和描述

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "Flutter Reader",
+  "appTitle": "Fleur",
   "@appTitle": {
     "description": "appTitle"
   },
