--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "zh_Hant",
-  "appTitle": "Flutter Reader",
+  "appTitle": "Fleur",
   "@appTitle": {
     "description": "appTitle"
   },
