--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -47,6 +47,10 @@
   "@theme": {
     "description": "theme"
   },
+  "themeMode": "Theme mode",
+  "@themeMode": {
+    "description": "Theme mode selector label"
+  },
   "system": "System",
   "@system": {
     "description": "system"
@@ -58,6 +62,42 @@
   "dark": "Dark",
   "@dark": {
     "description": "dark"
+  },
+  "dynamicColor": "Dynamic colors",
+  "@dynamicColor": {
+    "description": "Use Material You dynamic colors when available"
+  },
+  "dynamicColorSubtitle": "Use Material You colors (Android 12+)",
+  "@dynamicColorSubtitle": {
+    "description": "Hint for dynamic colors setting"
+  },
+  "seedColorPreset": "Theme colors",
+  "@seedColorPreset": {
+    "description": "Seed color preset selector label"
+  },
+  "seedColorPresetSubtitle": "Used when dynamic colors are off/unavailable",
+  "@seedColorPresetSubtitle": {
+    "description": "Seed color preset selector hint"
+  },
+  "seedColorBlue": "Blue",
+  "@seedColorBlue": {
+    "description": "Seed color preset name"
+  },
+  "seedColorGreen": "Green",
+  "@seedColorGreen": {
+    "description": "Seed color preset name"
+  },
+  "seedColorPurple": "Purple",
+  "@seedColorPurple": {
+    "description": "Seed color preset name"
+  },
+  "seedColorOrange": "Orange",
+  "@seedColorOrange": {
+    "description": "Seed color preset name"
+  },
+  "seedColorPink": "Pink",
+  "@seedColorPink": {
+    "description": "Seed color preset name"
   },
   "language": "Language",
   "@language": {
