feat: 添加版本号、构建号和许可证信息，优化关于页面显示

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -589,6 +589,30 @@
   "@keyboardShortcuts": {
     "description": "keyboardShortcuts"
   },
+  "version": "Version",
+  "@version": {
+    "description": "version"
+  },
+  "buildNumber": "Build number",
+  "@buildNumber": {
+    "description": "buildNumber"
+  },
+  "openSourceLicense": "Open source license",
+  "@openSourceLicense": {
+    "description": "openSourceLicense"
+  },
+  "viewLicense": "View license",
+  "@viewLicense": {
+    "description": "viewLicense"
+  },
+  "thirdPartyLicenses": "Third-party licenses",
+  "@thirdPartyLicenses": {
+    "description": "thirdPartyLicenses"
+  },
+  "viewThirdPartyLicenses": "View all open source licenses",
+  "@viewThirdPartyLicenses": {
+    "description": "viewThirdPartyLicenses"
+  },
   "filter": "Filter",
   "@filter": {
     "description": "filter"
