feat: 增强 Miniflux 集成与设置管理
- 重构 `syncServiceProvider` 和 `articleActionServiceProvider`，引入依赖以改进状态管理。
- 新增 `EffectiveFeedSettings` 类，用于根据应用设置解析订阅源和分类配置。
- 更新 `MinifluxSyncService`，采用 `EffectiveFeedSettings` 优化同步逻辑与网页内容获取策略。
- 在 `AppSettings` 中新增 Miniflux 条目限制和网页抓取模式设置，并在 `ServicesTab` 中提供对应 UI 控件。
- 在同步操作中为文章和图片实现缓存策略。
- 增强订阅源刷新时的 UI 错误处理与用户反馈。
- 更新测试以覆盖新设置并确保 JSON 持久化。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -544,6 +544,98 @@
   "@services": {
     "description": "services"
   },
+  "account": "Account",
+  "@account": {
+    "description": "account"
+  },
+  "local": "Local",
+  "@local": {
+    "description": "local"
+  },
+  "miniflux": "Miniflux",
+  "@miniflux": {
+    "description": "miniflux"
+  },
+  "addLocal": "Add Local",
+  "@addLocal": {
+    "description": "addLocal"
+  },
+  "addLocalAccount": "Add Local Account",
+  "@addLocalAccount": {
+    "description": "addLocalAccount"
+  },
+  "addMiniflux": "Add Miniflux",
+  "@addMiniflux": {
+    "description": "addMiniflux"
+  },
+  "minifluxStrategy": "Miniflux strategy",
+  "@minifluxStrategy": {
+    "description": "minifluxStrategy"
+  },
+  "minifluxStrategySubtitle": "Controls how much data is fetched/prefetched during sync.",
+  "@minifluxStrategySubtitle": {
+    "description": "minifluxStrategySubtitle"
+  },
+  "minifluxEntriesLimit": "Entries per sync",
+  "@minifluxEntriesLimit": {
+    "description": "minifluxEntriesLimit"
+  },
+  "minifluxWebFetchMode": "Web page fetching",
+  "@minifluxWebFetchMode": {
+    "description": "minifluxWebFetchMode"
+  },
+  "minifluxWebFetchModeSubtitle": "When \"Download Web Pages during Sync\" is enabled.",
+  "@minifluxWebFetchModeSubtitle": {
+    "description": "minifluxWebFetchModeSubtitle"
+  },
+  "minifluxWebFetchModeClient": "Client (Readability)",
+  "@minifluxWebFetchModeClient": {
+    "description": "minifluxWebFetchModeClient"
+  },
+  "minifluxWebFetchModeServer": "Server (Miniflux fetch-content)",
+  "@minifluxWebFetchModeServer": {
+    "description": "minifluxWebFetchModeServer"
+  },
+  "unlimited": "Unlimited",
+  "@unlimited": {
+    "description": "unlimited"
+  },
+  "fieldName": "Name",
+  "@fieldName": {
+    "description": "fieldName"
+  },
+  "baseUrl": "Base URL",
+  "@baseUrl": {
+    "description": "baseUrl"
+  },
+  "minifluxBaseUrlHint": "https://miniflux.example.com",
+  "@minifluxBaseUrlHint": {
+    "description": "minifluxBaseUrlHint"
+  },
+  "apiToken": "API Token",
+  "@apiToken": {
+    "description": "apiToken"
+  },
+  "show": "Show",
+  "@show": {
+    "description": "show"
+  },
+  "hide": "Hide",
+  "@hide": {
+    "description": "hide"
+  },
+  "missingRequiredFields": "Missing required fields",
+  "@missingRequiredFields": {
+    "description": "missingRequiredFields"
+  },
+  "invalidBaseUrl": "Invalid base URL",
+  "@invalidBaseUrl": {
+    "description": "invalidBaseUrl"
+  },
+  "onlySupportedInLocalAccount": "Only supported in Local account",
+  "@onlySupportedInLocalAccount": {
+    "description": "onlySupportedInLocalAccount"
+  },
   "autoRefresh": "Auto refresh",
   "@autoRefresh": {
     "description": "autoRefresh"
