feat: 新增账户管理功能，支持对话框和头像显示
- 实现添加本地和 Miniflux 账户的对话框
- 重构服务选项卡以使用新对话框简化账户添加流程
- 创建账户头像组件，显示账户首字母和类型徽章
- 新增账户管理面板，支持重命名和删除账户
- 添加同步状态显示组件，在侧边栏底部展示同步状态
- 增强侧边栏功能，包含账户管理选项和同步状态显示

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -757,6 +757,34 @@
   "@syncWebPages": {
     "description": "syncWebPages"
   },
+  "syncStatusSyncing": "Syncing",
+  "@syncStatusSyncing": {
+    "description": "Sync status: syncing (generic)"
+  },
+  "syncStatusSyncingFeeds": "Syncing feeds",
+  "@syncStatusSyncingFeeds": {
+    "description": "Sync status: syncing feeds"
+  },
+  "syncStatusSyncingSubscriptions": "Syncing subscriptions",
+  "@syncStatusSyncingSubscriptions": {
+    "description": "Sync status: syncing subscriptions"
+  },
+  "syncStatusSyncingUnreadArticles": "Syncing unread articles",
+  "@syncStatusSyncingUnreadArticles": {
+    "description": "Sync status: syncing unread articles"
+  },
+  "syncStatusUploadingChanges": "Uploading changes",
+  "@syncStatusUploadingChanges": {
+    "description": "Sync status: uploading local/outbox changes"
+  },
+  "syncStatusCompleted": "Sync complete",
+  "@syncStatusCompleted": {
+    "description": "Sync status: completed"
+  },
+  "syncStatusFailed": "Sync failed",
+  "@syncStatusFailed": {
+    "description": "Sync status: failed"
+  },
   "showAiSummary": "Show AI Summary",
   "@showAiSummary": {
     "description": "showAiSummary"
