refactor: 重构日志记录与错误处理机制
- 引入 AppLogger 实现应用内统一的日志记录。
- 在 FaviconStore、MinifluxSyncService 和 SyncService 中将 debugPrint 替换为 AppLogger。
- 在 HtmlSanitizer 中为 iframe 域名验证添加日志记录。
- 在 AboutTab 中实现日志文件管理功能，支持用户打开和导出日志。
- 增强 ReaderView 中的错误处理，优化提取失败时的用户反馈。
- 更新 PathManager 以管理日志目录。
- 为 HtmlSanitizer 中的 iframe 清理功能添加测试。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -226,6 +226,10 @@
   "@fullText": {
     "description": "fullText"
   },
+  "fullTextRetry": "Full text failed. Retry",
+  "@fullTextRetry": {
+    "description": "fullTextRetry"
+  },
   "readerSettings": "Reader settings",
   "@readerSettings": {
     "description": "readerSettings"
@@ -522,6 +526,10 @@
   "@autoColor": {
     "description": "autoColor"
   },
+  "tagsLoadingError": "Error loading tags",
+  "@tagsLoadingError": {
+    "description": "Error message displayed when tags fail to load in the dialog"
+  },
   "cleanedArticles": "Cleaned {count} articles",
   "@cleanedArticles": {
     "placeholders": {
@@ -696,6 +704,30 @@
   "openFolder": "Open folder",
   "@openFolder": {
     "description": "openFolder"
+  },
+  "logDirectory": "Log directory",
+  "@logDirectory": {
+    "description": "logDirectory"
+  },
+  "openLog": "Open log",
+  "@openLog": {
+    "description": "openLog"
+  },
+  "openLogFolder": "Open log folder",
+  "@openLogFolder": {
+    "description": "openLogFolder"
+  },
+  "exportLogs": "Export logs",
+  "@exportLogs": {
+    "description": "exportLogs"
+  },
+  "exportedLogs": "Logs exported",
+  "@exportedLogs": {
+    "description": "exportedLogs"
+  },
+  "noLogsFound": "No log files found",
+  "@noLogsFound": {
+    "description": "noLogsFound"
   },
   "keyboardShortcuts": "Keyboard shortcuts",
   "@keyboardShortcuts": {
