--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -191,6 +191,22 @@
   "@addSubscription": {
     "description": "addSubscription"
   },
+  "selectCategory": "選擇分類",
+  "@selectCategory": {
+    "description": "selectCategory"
+  },
+  "loadingCategories": "正在載入分類...",
+  "@loadingCategories": {
+    "description": "loadingCategories"
+  },
+  "creatingCategory": "正在建立分類...",
+  "@creatingCategory": {
+    "description": "creatingCategory"
+  },
+  "feverAddSubscriptionNotSupported": "Fever 帳號不支援新增訂閱，請在伺服器端管理訂閱。",
+  "@feverAddSubscriptionNotSupported": {
+    "description": "feverAddSubscriptionNotSupported"
+  },
   "newCategory": "新增分類",
   "@newCategory": {
     "description": "newCategory"
@@ -304,6 +320,26 @@
   "@rssAtomUrl": {
     "description": "rssAtomUrl"
   },
+  "feedOrWebsiteUrl": "訂閱源或網站 URL",
+  "@feedOrWebsiteUrl": {
+    "description": "feedOrWebsiteUrl"
+  },
+  "discoveringFeeds": "正在發現訂閱源…",
+  "@discoveringFeeds": {
+    "description": "discoveringFeeds"
+  },
+  "addingSubscription": "正在新增訂閱…",
+  "@addingSubscription": {
+    "description": "addingSubscription"
+  },
+  "selectFeed": "選擇訂閱源",
+  "@selectFeed": {
+    "description": "selectFeed"
+  },
+  "noFeedsFound": "未找到可用的訂閱源",
+  "@noFeedsFound": {
+    "description": "noFeedsFound"
+  },
   "name": "名稱",
   "@name": {
     "description": "name"
@@ -368,6 +404,14 @@
   "deleteCategoryConfirmContent": "此分類下的訂閱源將移至未分類。",
   "@deleteCategoryConfirmContent": {
     "description": "deleteCategoryConfirmContent"
+  },
+  "deleteTagConfirmTitle": "刪除標籤？",
+  "@deleteTagConfirmTitle": {
+    "description": "deleteTagConfirmTitle"
+  },
+  "deleteTagConfirmContent": "這會從所有文章中移除該標籤。",
+  "@deleteTagConfirmContent": {
+    "description": "deleteTagConfirmContent"
   },
   "categoryDeleted": "分類已刪除",
   "@categoryDeleted": {
@@ -454,6 +498,18 @@
   "openInBrowser": "在瀏覽器打開",
   "@openInBrowser": {
     "description": "openInBrowser"
+  },
+  "copyLink": "複製連結",
+  "@copyLink": {
+    "description": "copyLink"
+  },
+  "copiedToClipboard": "已複製到剪貼簿",
+  "@copiedToClipboard": {
+    "description": "copiedToClipboard"
+  },
+  "share": "分享",
+  "@share": {
+    "description": "share"
   },
   "autoMarkRead": "打開時自動標記為已讀",
   "@autoMarkRead": {
@@ -565,6 +621,10 @@
   "@miniflux": {
     "description": "miniflux"
   },
+  "fever": "Fever",
+  "@fever": {
+    "description": "fever"
+  },
   "addLocal": "新增本地",
   "@addLocal": {
     "description": "addLocal"
@@ -576,6 +636,10 @@
   "addMiniflux": "新增 Miniflux",
   "@addMiniflux": {
     "description": "addMiniflux"
+  },
+  "addFever": "新增 Fever",
+  "@addFever": {
+    "description": "addFever"
   },
   "minifluxStrategy": "Miniflux 策略",
   "@minifluxStrategy": {
@@ -621,9 +685,17 @@
   "@minifluxBaseUrlHint": {
     "description": "minifluxBaseUrlHint"
   },
+  "feverBaseUrlHint": "https://example.com/fever/",
+  "@feverBaseUrlHint": {
+    "description": "feverBaseUrlHint"
+  },
   "apiToken": "API Token",
   "@apiToken": {
     "description": "apiToken"
+  },
+  "apiKey": "API Key",
+  "@apiKey": {
+    "description": "apiKey"
   },
   "authenticationMethod": "驗證方式",
   "@authenticationMethod": {
@@ -636,6 +708,10 @@
   "minifluxAuthHint": "可填寫 API Token（建議）或使用者名稱/密碼。",
   "@minifluxAuthHint": {
     "description": "minifluxAuthHint"
+  },
+  "feverAuthHint": "可填寫 API Key（建議）或使用者名稱/密碼。",
+  "@feverAuthHint": {
+    "description": "feverAuthHint"
   },
   "username": "使用者名稱",
   "@username": {
@@ -818,9 +894,13 @@
   "@syncStatusFailed": {
     "description": "Sync status: failed"
   },
-  "showAiSummary": "顯示 AI 摘要",
+  "showAiSummary": "顯示摘要",
   "@showAiSummary": {
     "description": "showAiSummary"
+  },
+  "summary": "摘要",
+  "@summary": {
+    "description": "summary"
   },
   "showImageTitle": "顯示圖片標題",
   "@showImageTitle": {
