已在设置页新增「翻译与 AI 服务」模块：翻译提供方可选 Google/Bing（网页）、百度/DeepL（API）、DeepLX，以及“已启用的 AI 服务”；AI 服务支持像 Cherry Studio 那样新增/编辑/启用/设为默认，并内置 OpenAI、Gemini、Anthropic、硅基流动、智谱、DeepSeek、New API、OpenRouter、ModelScope 等模板。
`★ Insight ─────────────────────────────────────`
- 配置分两层：非敏感信息进 JSON（好迁移/好备份），API Key 进 FlutterSecureStorage（别把密钥裸奔在磁盘上）
- “翻译提供方”统一成一个 selection（含动态的 AI 服务项），并在保存时 normalize，避免禁用/删除服务后留下脏状态
- 预设模板只是“快捷填表”，不强行塞默认服务，保持用户配置干净
`─────────────────────────────────────────────────`

- 设置页入口新增 Tab：`lib/screens/settings_screen.dart:63`
- 模块 UI（翻译选择 + Baidu/DeepL/DeepLX 配置 + AI 服务管理）：`lib/ui/settings/tabs/translation_ai_services_tab.dart:18`
- AI 服务模板列表：`lib/ui/settings/translation_ai/ai_service_templates.dart:5`
- 配置与持久化（`translation_ai_settings.json`）：`lib/services/settings/translation_ai_settings.dart:1`
- 密钥安全存储（Baidu/DeepL/各 AI 服务 Key）：`lib/services/settings/translation_ai_secret_store.dart:3`
- 本地化新增文案 key：`lib/l10n/app_zh.arb:1006`
- 已跑通：`flutter analyze`、`flutter test`

要不要我下一步把“选中文本 -> 翻译”动作接到阅读页的上下文菜单里（网页翻译先落地，API/AI 翻译再逐步补齐）？

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1001,5 +1001,29 @@
   "windowClose": "Close",
   "@windowClose": {
     "description": "Tooltip for the window close button on desktop"
+  },
+  "translationAndAiServices": "Translation & AI",
+  "@translationAndAiServices": {
+    "description": "Settings tab for translation and AI services"
+  },
+  "translation": "Translation",
+  "@translation": {
+    "description": "Translation section title"
+  },
+  "translationProvider": "Translation provider",
+  "@translationProvider": {
+    "description": "Setting title for selecting translation provider"
+  },
+  "aiServices": "AI services",
+  "@aiServices": {
+    "description": "AI services section title"
+  },
+  "addAiService": "Add AI service",
+  "@addAiService": {
+    "description": "Button/title for adding an AI service"
+  },
+  "aiService": "AI service",
+  "@aiService": {
+    "description": "Generic label for AI service"
   }
 }
